--- a/reveal_card.html
+++ b/reveal_card.html
@@ -31,7 +31,7 @@
   <div id="particles-js">
     <img id="spin2" src="spinngWeel.png"></img>
     <div class="container">
-      <h2>我的2024專屬能量是</h2>
+      <h2 id="reveal-title">我的2024專屬能量是</h2>
       <div class="card_container">
         <a href="reveal_card"><img id="reveal_card" class="reveal_card animate__animated animate__flipInX" id="card1"
             src="card.png"></a>
@@ -99,7 +99,7 @@
       {
         "cardTitle": "好暖活-Kindly Warm",
         "cardSubtitle": "海底輪 ROOT CHAKRA<br>#專注 #平靜",
-        "cardInfo": "豐盈<br>2024年是個豐盈的一年，以海底輪為中心，專注生存需求，建立堅實的基礎，迎接變化，<br>維持身心平衡，過著充實的一年。<br>調整：身體與心靈缺乏的安全感",
+        "cardInfo": "【 - 豐盈 - 】<br>2024年是個豐盈的一年，以海底輪為中心<br>專注生存需求，建立堅實的基礎，迎接變化<br>維持身心平衡，過著充實的一年<br>調整：身體與心靈缺乏的安全感",
         "cardOil": "｜檸檬馬鞭草、薄荷、佛手柑｜",
         "cardImage": "7.png",
         "link": "https://www.savunbio.com/products/kindlywarm",
@@ -108,7 +108,7 @@
       {
         "cardTitle": "好桃花-Fate of love",
         "cardSubtitle": "臍輪SACRAL CHAKRA<br>#自信魅力 #吸引力",
-        "cardInfo": "創造<br>肚臍輪的力量將啟發你，在兩性和人際關係中，<br>展現更豐富的創意，促進深層連結，2024成為愛與合作的年份。<br>調整：和諧的情侶關係、提升人際關係",
+        "cardInfo": "【 - 創造 - 】<br>肚臍輪的力量將啟發你在兩性和人際關係中<br>展現更豐富的創意，促進深層連結<br>2024成為愛與合作的年份<br>調整：和諧的情侶關係、提升人際關係",
         "cardOil": "｜薰衣草｜薄荷｜洋甘菊｜",
         "cardImage": "6.png",
         "link": "https://www.savunbio.com/products/fate-in-love",
@@ -117,7 +117,7 @@
       {
         "cardTitle": "好旺旺-Good Luck",
         "cardSubtitle": "太陽神經叢 SOLAR PLEXUS CHAKRA <br>#正能量 #運氣提升",
-        "cardInfo": "彈性<br>越有彈性越有力量的2024年，<br>太陽神經叢引導你建立自我認同。擁有更多彈性，<br>你將擁有更強大的力量，蓄積更多成就。<br>調整：尋找自我，發自內心的自信心",
+        "cardInfo": "【 - 彈性 - 】<br>越有彈性越有力量的2024年<br>太陽神經叢引導你建立自我認同。擁有更多彈性<br>你將擁有更強大的力量，蓄積更多成就<br>調整：尋找自我，發自內心的自信心",
         "cardOil": "｜薄荷｜檸檬馬鞭草｜洋甘菊｜",
         "cardImage": "4.png",
         "link": "https://www.savunbio.com/products/good-luck",
@@ -126,7 +126,7 @@
       {
         "cardTitle": "好心情-Good Mood",
         "cardSubtitle": "心輪 HEART CHAKRA <br>#安全感",
-        "cardInfo": "仁愛<br>心輪主宰愛與安全感，2024年的仁愛之力提醒你，<br>先愛自己，再愛他人。<br>這將成為建立深厚關係和燃起內在安定感的關鍵。<br>調整：以理性視野看待一切。",
+        "cardInfo": "【 - 仁愛 - 】<br>心輪主宰愛與安全感，2024年的仁愛之力提醒你<br>先愛自己，再愛他人<br>這將成為建立深厚關係和燃起內在安定感的關鍵<br>調整：以理性視野看待一切",
         "cardOil": "｜檸檬馬鞭草｜薄荷｜佛手柑｜",
         "cardImage": "2.png",
         "link": "https://www.savunbio.com/products/good-mood",
@@ -135,7 +135,7 @@
       {
         "cardTitle": "好自然-Step in Nature",
         "cardSubtitle": "喉輪THROAT CHAKRA<br>#回歸自我 #調整身心",
-        "cardInfo": "驕傲<br>2024年盡情感受每個驕傲的時刻，並善用溝通技巧展現自信。<br>透過自尊心的提升，你將更有效地表達，<br>贏得信任並建立深厚人際關係。<br>調整：提升自己的溝通與內省，展現人際關係的自在與自信",
+        "cardInfo": "【 - 驕傲 - 】<br>2024年盡情感受每個驕傲的時刻，並善用溝通技巧展現自信<br>透過自尊心的提升，你將更有效地表達<br>贏得信任並建立深厚人際關係<br>調整：提升自己的溝通與內省，展現人際關係的自在與自信",
         "cardOil": "｜薄荷｜花梨木｜檸檬馬鞭草｜",
         "cardImage": "3.png",
         "link": "https://www.savunbio.com/products/step-in-nature",
@@ -144,7 +144,7 @@
       {
         "cardTitle": "好慵懶-Lazy Cozy",
         "cardSubtitle": "眉心輪THIRD-EYE CHAKRA<br>#溝通 #思路清晰",
-        "cardInfo": "直覺<br>眉心輪啟示著直覺的力量。2024年，堅信自己的初衷，<br>跟著直覺走，開啟更清晰、明確的人生方向。<br>調整：心平靜和，放鬆，思慮清晰",
+        "cardInfo": "【 - 直覺 - 】<br>眉心輪啟示著直覺的力量<br>2024年堅信自己的初衷<br>跟著直覺走，開啟更清晰、明確的人生方向<br>調整：心平靜和，放鬆，思慮清晰",
         "cardOil": "｜花梨木｜佛手柑｜洋甘菊｜",
         "cardImage": "5.png",
         "link": "https://www.savunbio.com/products/lazy-cozy",
@@ -153,7 +153,7 @@
       {
         "cardTitle": "好好睡-Relaxing & Release",
         "cardSubtitle": "頂輪CROWN CHAKRA<br>#舒壓解悶 #助眠",
-        "cardInfo": "勇氣<br>2024年，頂輪賦予你無窮勇氣，<br>引領你蛻變成更高層次的自己，啟動靈性之旅。<br>調整：平靜內在，自我對話，",
+        "cardInfo": "【 - 勇氣 - 】<br>2024年頂輪賦予你無窮勇氣<br>引領你蛻變成更高層次的自己，啟動靈性之旅<br>調整：平靜內在，自我對話，",
         "cardOil": "｜佛手柑｜薰衣草｜花梨木｜",
         "cardImage": "1.png",
         "link": "https://www.savunbio.com/products/relaxingrelease",
