--- a/choose_card.html
+++ b/choose_card.html
@@ -1,171 +1,190 @@
 <!DOCTYPE html>
 <html>
-   <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-      <meta charset="utf-8"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1, 
-                                  minimum-scale=1, maximum-scale=1, user-scalable=no"/> 
-      <apex:stylesheet value="{!URLFOR($Resource.Mobile_Design_Templates, 
-                'Mobile-Design-Templates-master/common/css/app.min.css')}"/>
-      <apex:includeScript value="{!URLFOR($Resource.Mobile_Design_Templates, 
-                'Mobile-Design-Templates-master/common/js/jQuery2.0.2.min.js')}"/>
-      <apex:includeScript value="{!URLFOR($Resource.Mobile_Design_Templates, 
-                'Mobile-Design-Templates-master/common/js/jquery.touchwipe.min.js')}"/>
-      <apex:includeScript value="{!URLFOR($Resource.Mobile_Design_Templates, 
-                'Mobile-Design-Templates-master/common/js/main.min.js')}"/>
-      
-   </head>
-   <body>
-   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-   <!-- <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script> -->
-   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" /> -->
-   <script>
+
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, 
+                                  minimum-scale=1, maximum-scale=1, user-scalable=no" />
+  <apex:stylesheet value="{!URLFOR($Resource.Mobile_Design_Templates, 
+                'Mobile-Design-Templates-master/common/css/app.min.css')}" />
+  <apex:includeScript value="{!URLFOR($Resource.Mobile_Design_Templates, 
+                'Mobile-Design-Templates-master/common/js/jQuery2.0.2.min.js')}" />
+  <apex:includeScript value="{!URLFOR($Resource.Mobile_Design_Templates, 
+                'Mobile-Design-Templates-master/common/js/jquery.touchwipe.min.js')}" />
+  <apex:includeScript value="{!URLFOR($Resource.Mobile_Design_Templates, 
+                'Mobile-Design-Templates-master/common/js/main.min.js')}" />
+
+</head>
+
+<body>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <!-- <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" /> -->
+  <script>
     // new WOW().init();
-    </script>
+  </script>
 
-   <div id="particles-js">
- <img id="spin2" src="spinngWeel.png"></img>
+<div class="wrapper">
+  <div id="particles-js">
+    <img id="spin2" src="spinngWeel.png"></img>
 
-  <h1 class="title">請抽取一張卡片</h1>
-  <div class="container">
-    <div class="row">
-    <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img class="mycard animate__animated animate__flipInX" id="card1" src="card.png"></a>
-    <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img class="mycard animate__animated animate__flipInX" id="card2" src="card.png"></a>
-    <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img class="mycard animate__animated animate__flipInX" id="card3" src="card.png"></a>
-    <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img class="mycard animate__animated animate__flipInX" id="card4" src="card.png"></a>
-    <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img class="mycard animate__animated animate__flipInX" id="card5" src="card.png"></a>
-    <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img class="mycard animate__animated animate__flipInX" id="card6" src="card.png"></a>
-    <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img class="mycard animate__animated animate__flipInX" id="card7" src="card.png"></a>
-  </div>
-  </div>
-
-  </div>
    
+      <div class="container">
+        <h2 class="title">請抽取一張卡片</h2>
+        <div class="row">
+          <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img
+              class="mycard animate__animated animate__flipInX" id="card1" src="card.png"></a>
+          <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img
+              class="mycard animate__animated animate__flipInX" id="card2" src="card.png"></a>
+          <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img
+              class="mycard animate__animated animate__flipInX" id="card3" src="card.png"></a>
+          <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img
+              class="mycard animate__animated animate__flipInX" id="card4" src="card.png"></a>
+          <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img
+              class="mycard animate__animated animate__flipInX" id="card5" src="card.png"></a>
+          <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img
+              class="mycard animate__animated animate__flipInX" id="card6" src="card.png"></a>
+          <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img
+              class="mycard animate__animated animate__flipInX" id="card7" src="card.png"></a>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
 
 
 
-<script>
- particlesJS("particles-js", {
-  "particles": {
-    "number": {
-      "value": 355,
-      "density": {
-        "enable": true,
-        "value_area": 300
-      }
-    },
-    "color": {
-      "value": "#ffffff"
-    },
-    "shape": {
-      "type": "circle",
-      "stroke": {
-        "width": 0,
-        "color": "#000000"
-      },
-      "polygon": {
-        "nb_sides": 5
-      },
-      "image": {
-        "src": "img/github.svg",
-        "width": 100,
-        "height": 100
-      }
-    },
-    "opacity": {
-      "value": 0.48927153781200905,
-      "random": false,
-      "anim": {
-        "enable": true,
-        "speed": 0.2,
-        "opacity_min": 0,
-        "sync": false
-      }
-    },
-    "size": {
-      "value": 2,
-      "random": true,
-      "anim": {
-        "enable": true,
-        "speed": 2,
-        "size_min": 0,
-        "sync": false
-      }
-    },
-    "line_linked": {
-      "enable": false,
-      "distance": 30,
-      "color": "#ffffff",
-      "opacity": 0.4,
-      "width": 1
-    },
-    "move": {
-      "enable": true,
-      "speed": 1,
-      "direction": "none",
-      "random": true,
-      "straight": false,
-      "out_mode": "out",
-      "bounce": false,
-      "attract": {
-        "enable": false,
-        "rotateX": 600,
-        "rotateY": 1200
-      }
-    }
-  },
-  "interactivity": {
-    "detect_on": "canvas",
-    "events": {
-      "onhover": {
-        "enable": true,
-        "mode": "bubble"
-      },
-      "onclick": {
-        "enable": true,
-        "mode": "push"
-      },
-      "resize": true
-    },
-    "modes": {
-      "grab": {
-        "distance": 400,
+
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": {
+          "value": 355,
+          "density": {
+            "enable": true,
+            "value_area": 300
+          }
+        },
+        "color": {
+          "value": "#ffffff"
+        },
+        "shape": {
+          "type": "circle",
+          "stroke": {
+            "width": 0,
+            "color": "#000000"
+          },
+          "polygon": {
+            "nb_sides": 5
+          },
+          "image": {
+            "src": "img/github.svg",
+            "width": 100,
+            "height": 100
+          }
+        },
+        "opacity": {
+          "value": 0.48927153781200905,
+          "random": false,
+          "anim": {
+            "enable": true,
+            "speed": 0.2,
+            "opacity_min": 0,
+            "sync": false
+          }
+        },
+        "size": {
+          "value": 2,
+          "random": true,
+          "anim": {
+            "enable": true,
+            "speed": 2,
+            "size_min": 0,
+            "sync": false
+          }
+        },
         "line_linked": {
-          "opacity": 1
+          "enable": false,
+          "distance": 30,
+          "color": "#ffffff",
+          "opacity": 0.4,
+          "width": 1
+        },
+        "move": {
+          "enable": true,
+          "speed": 1,
+          "direction": "none",
+          "random": true,
+          "straight": false,
+          "out_mode": "out",
+          "bounce": false,
+          "attract": {
+            "enable": false,
+            "rotateX": 600,
+            "rotateY": 1200
+          }
         }
       },
-      "bubble": {
-        "distance": 500.91608391608392,
-        "size": 2,
-        "duration": 3,
-        "opacity": 1,
-        "speed": 10
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": {
+            "enable": true,
+            "mode": "bubble"
+          },
+          "onclick": {
+            "enable": true,
+            "mode": "push"
+          },
+          "resize": true
+        },
+        "modes": {
+          "grab": {
+            "distance": 400,
+            "line_linked": {
+              "opacity": 1
+            }
+          },
+          "bubble": {
+            "distance": 500.91608391608392,
+            "size": 2,
+            "duration": 3,
+            "opacity": 1,
+            "speed": 10
+          },
+          "repulse": {
+            "distance": 200,
+            "duration": 0.4
+          },
+          "push": {
+            "particles_nb": 4
+          },
+          "remove": {
+            "particles_nb": 2
+          }
+        }
       },
-      "repulse": {
-        "distance": 200,
-        "duration": 0.4
-      },
-      "push": {
-        "particles_nb": 4
-      },
-      "remove": {
-        "particles_nb": 2
-      }
-    }
-  },
-  "retina_detect": true
-}); 
- </script>
+      "retina_detect": true
+    }); 
+  </script>
 
 
 
 
 
-   </body>
+</body>
 
 </html>
